RESOLVED FIXED207575
Should not allow zooming to reveal focused element when suppressing selection assistant
https://bugs.webkit.org/show_bug.cgi?id=207575
Summary Should not allow zooming to reveal focused element when suppressing selection...
Daniel Bates
Reported 2020-02-11 12:49:26 PST
At the time of writing it always makes sense to forbid zooming to reveal the focused element when the selection assistant is suppressed.
Attachments
Test case (503 bytes, text/html)
2020-02-11 14:43 PST, Daniel Bates
no flags
Patch (2.66 KB, patch)
2020-02-11 14:49 PST, Daniel Bates
no flags
Patch (2.67 KB, patch)
2020-02-11 14:49 PST, Daniel Bates
no flags
Patch (2.66 KB, patch)
2020-02-11 14:53 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2020-02-11 13:07:37 PST
Steps to reproduce: 1. Visit <data:text/html,<div contenteditable="true" style="height: 500px; width: 500px; border: 1px solid black"><span contenteditable="false"><a href="http://www.apple.com">Apple</a></span></div>> 2. Scroll and zoom the page such that "Apple" is partially offscreen, leave just enough on screen to tap-and-hold it. 3. Tap-and-hold on "Apple" to show a preview. Then the page will scroll and zoom the content.
Daniel Bates
Comment 2 2020-02-11 14:43:58 PST
Created attachment 390428 [details] Test case Test case. Depends on Ahem.ttf being in the same directory as the test. Tap and hold on the purple square. This file can be used to write a future API test. I tried writing an API test, but WebKit uses UIKit IPI, -previewClickInteraction, this IPI is not in my SDK. So, I get "-[_UIClickPresentationInteraction previewClickInteraction]: unrecognized selector sent to instance 0x7f9a8a631bb0" messages.
Daniel Bates
Comment 3 2020-02-11 14:48:17 PST
Blocked from writing a test because of <rdar://problem/59364638>.
Daniel Bates
Comment 4 2020-02-11 14:49:01 PST
Daniel Bates
Comment 5 2020-02-11 14:49:51 PST
Daniel Bates
Comment 6 2020-02-11 14:53:40 PST
Daniel Bates
Comment 7 2020-02-11 14:54:23 PST
Thank you!
Daniel Bates
Comment 8 2020-02-11 14:57:43 PST
Comment on attachment 390441 [details] Patch Clearing flags on attachment: 390441 Committed r256378: <https://trac.webkit.org/changeset/256378>
Daniel Bates
Comment 9 2020-02-11 14:57:45 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2020-02-11 14:58:14 PST
Note You need to log in before you can comment on or make changes to this bug.