Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -1936,7 +1936,7 @@ static NSValue *nsSizeForTapHighlightBorderRadius(WebCore::IntSize borderRadius,
 
 - (void)_zoomToRevealFocusedElement
 {
-    if (_suppressSelectionAssistantReasons.contains(WebKit::EditableRootIsTransparentOrFullyClipped) || _suppressSelectionAssistantReasons.contains(WebKit::FocusedElementIsTooSmall))
+    if (_suppressSelectionAssistantReasons)
         return;
 
     // In case user scaling is force enabled, do not use that scaling when zooming in with an input field.
